[AI Fix] (a11y ADA compliance): strengthen link contrast token to #2474dc across theme and footer

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -14,7 +14,7 @@ $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
-$brand-color:      #2373db !default;
+$brand-color:      #2474dc !default;
 
 $grey-color:       #757575 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
