--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -142,13 +142,13 @@
 }
 
 .post-link.archive-years {
-    color: #2373db;
+    color: #2474dc;
     //text-decoration: aqua;
     font-size: 100%;
 }
 
 .post-link.archive-years:visited {
-    color: #2373db;
+    color: #2474dc;
 }
 
 .home_post_nav {
