--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -241,7 +241,7 @@
 }
 
 .footer-col .u-email {
-  color: #2373db;
+  color: #2474dc;
 }
 
 .post-link {
